--- a/create.html
+++ b/create.html
@@ -3,7 +3,49 @@
 <head>
   <title>Login Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .form-container {
+      width: 400px;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .form-container h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .form-container label {
+      font-weight: bold;
+    }
+
+    .form-container input[type="text"],
+    .form-container input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ced4da;
+      border-radius: 5px;
+    }
+
+    .form-container button {
+      width: 100%;
+      padding: 10px;
+    }
+  </style>
  
   <script>
     function createAccount() {
@@ -43,16 +85,18 @@
 </head>
 <body>
   <div class="container">
-   
-
     <div class="form-container">
       <h2>Create Account</h2>
       <form>
-        <label for="create-username">Username:</label>
-        <input type="text" id="create-username" required>
+        <div class="mb-3">
+          <label for="create-username" class="form-label">Username:</label>
+          <input type="text" id="create-username" required class="form-control">
+        </div>
 
-        <label for="create-password">Password:</label>
-        <input type="password" id="create-password" required>
+        <div class="mb-3">
+          <label for="create-password" class="form-label">Password:</label>
+          <input type="password" id="create-password" required class="form-control">
+        </div>
 
         <button type="button" onclick="createAccount()" class="btn btn-success">Create Account</button>
       </form>
