--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App</title>
+    <link rel="icon" type="image/x-icon" href="assets/download.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <style>
         body {
-          background-color: #f8f9fa;
+            background-color: #f8f9fa;
+      background: #ffffff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #dcd0cf, #e0d6d6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f2d5d4, #d5cccc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
 
         .container {
@@ -23,6 +27,7 @@
           flex-direction: column;
           gap: 20px;
         }
+        
     </style>
     <script>
         function create(){
