--- a/create.html
+++ b/create.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Page</title>
+  <title>Create Account</title>
+  <link rel="icon" type="image/x-icon" href="assets/images.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <style>
     body {
       background-color: #f8f9fa;
+      background: #ffffff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #dcd0cf, #e0d6d6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f2d5d4, #d5cccc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     }
 
     .container {
