--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
         }
 
         .social-icons a {
-            color: #ab0b0b;
+            color: #0e0bab;
             margin-left:250px;
         }
         a{
