--- a/index.html
+++ b/index.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App</title>
-    <link rel="icon" type="image/x-icon" href="assets/download.jpg">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <style>
-        body {
-            background-color: #f8f9fa;
-      background: #ffffff;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #dcd0cf, #e0d6d6);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #f2d5d4, #d5cccc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        }
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>App</title>
+  <link rel="icon" type="image/x-icon" href="assets/download.jpg">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #f8f9fa;
+      background: -webkit-linear-gradient(to right, #dcd0cf, #e0d6d6);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #f2d5d4, #d5cccc);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    }
 
-        .container {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100vh;
-        }
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-        .btn-container {
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
-        }
-        
-    </style>
-    <script>
-        function create(){
-            window.location="http://127.0.0.1:5500/create.html";
-        }
-        function log(){
-            window.location="http://127.0.0.1:5500/login.html";
-        }
-    </script>
+    .btn-container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+  </style>
+  <script>
+    function create() {
+      window.location = "http://127.0.0.1:5500/create.html";
+    }
+
+    function log() {
+      window.location = "http://127.0.0.1:5500/login.html";
+    }
+  </script>
 </head>
+
 <body>
-    <div class="container">
-        <div class="btn-container">
-            <button onclick="create()" class="btn btn-primary">Create Account</button>
-            <button onclick="log()" class="btn btn-primary">Login</button>
-        </div>
+  <div class="container">
+    <div class="btn-container">
+      <button onclick="create()" class="btn btn-primary">Create Account</button>
+      <button onclick="log()" class="btn btn-primary">Login</button>
+      <div>
+        <p>Advertisement</p>
+        <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px"></a>
+        <a href="#"><img src="assets/EHY6QnZYdNX.png" alt="" width="125px"></a>
+      </div>
     </div>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </div>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
+
 </html>
