--- a/login.html
+++ b/login.html
@@ -12,9 +12,12 @@
     <style>
         body {
             background-color: #f8f9fa;
-      background: #ffffff;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #dcd0cf, #e0d6d6);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #f2d5d4, #d5cccc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: #ffffff;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #dcd0cf, #e0d6d6);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #f2d5d4, #d5cccc);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
 
         .form-container {
@@ -57,11 +60,15 @@
 
         .social-icons a {
             color: #0e0bab;
-            margin-left:250px;
+            margin-left: 250px;
         }
-        a{
-          color: black;
-          text-decoration: none;
+
+        a {
+            color: black;
+            text-decoration: none;
+        }
+        p{
+            margin-left: 360px;
         }
     </style>
 </head>
@@ -109,8 +116,12 @@
             </div>
         </div>
         <div class="container">
-          <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px" style="margin-left: 370px;margin-top: 30px;"></a>
-          <a href="#"><img src="assets/EHY6QnZYdNX.png" alt="" width="120px" style="margin-top: 30px;"></a>
+            <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px"
+                    style="margin-left: 370px;margin-top: 30px;"></a>
+            <a href="#"><img src="assets/EHY6QnZYdNX.png" alt="" width="120px" style="margin-top: 30px;"></a>
+        </div>
+        <div class="container">
+            <p>&copy; 2023 Your Company. All rights reserved.</p>
         </div>
     </footer>
 
