--- a/create.html
+++ b/create.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Create Account</title>
+  <title>AVIS Create Account</title>
   <link rel="icon" type="image/x-icon" href="assets/images.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <style>
     body {
-      background-color: #f8f9fa;
-      background: #ffffff;
-      background: -webkit-linear-gradient(to right, #dcd0cf, #e0d6d6);
-      background: linear-gradient(to right, #f2d5d4, #d5cccc);
+      background-color: #555;
+      background: #555;
+      background: -webkit-linear-gradient(to right, #555, #555);
+      background: linear-gradient(to right, #555, #555);
     }
 
     .container {
@@ -51,14 +51,21 @@
     }
 
     footer {
-      background-color: #f8f9fa;
+      background-color: #555;
       padding: 20px;
       text-align: center;
       margin-top: -80px;
     }
+
+    /* Responsive styles */
+    @media (max-width: 768px) {
+      .form-container {
+        width: 100%;
+      }
+    }
   </style>
   <script>
-    function createAccount() {
+        function createAccount() {
       var username = document.getElementById("create-username").value;
       var password = document.getElementById("create-password").value;
       var confirm = document.getElementById("create-confirmpassword").value;
@@ -111,6 +118,7 @@
       localStorage.setItem("users", JSON.stringify(users));
 
       alert("Account created successfully!");
+      window.location="http://127.0.0.1:5500/index.html";
       clearCreateForm();
     }
 
@@ -147,7 +155,7 @@
     </div>
   </div>
   <footer>
-    <p>&copy; 2023 Your Company. All rights reserved.</p>
+    <p style="color: floralwhite;">&copy; 2023 Your Company. All rights reserved.</p>
   </footer>
 </body>
 </html>
