--- a/login.html
+++ b/login.html
@@ -5,19 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>AVIS Login Page</title>
     <link rel="icon" type="image/x-icon" href="assets/images (1).jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
-            background: #ffffff;
-            /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #dcd0cf, #e0d6d6);
-            /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #f2d5d4, #d5cccc);
-            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background-color: #555;
+            background: #555;
+            background: -webkit-linear-gradient(to right,  #555,  #555);
+            background: linear-gradient(to right,  #555,  #555);
         }
 
         .form-container {
@@ -59,16 +56,34 @@
         }
 
         .social-icons a {
-            color: #0e0bab;
+            color: #f9f9f9;
             margin-left: 250px;
         }
 
         a {
-            color: black;
+            color: rgb(251, 250, 250);
             text-decoration: none;
         }
+
         p{
             margin-left: 360px;
+            color: #f9f9f9;
+        }
+
+        /* Responsive styles */
+        @media (max-width: 768px) {
+            .form-container {
+                width: 100%;
+                margin-top: 50px;
+            }
+
+            .social-icons a {
+                margin-left: 0;
+            }
+
+            p{
+                margin-left: 0;
+            }
         }
     </style>
 </head>
@@ -76,7 +91,7 @@
 <body>
     <div class="container">
         <div class="form-container">
-            <h2><i class="fab fa-instagram"></i> Instagram</h2>
+            <h2><i class="fas fa-campground"></i> AVIS</h2>
             <form>
                 <div class="mb-3">
                     <label for="login-username" class="form-label">Username:</label>
@@ -116,8 +131,7 @@
             </div>
         </div>
         <div class="container">
-            <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px"
-                    style="margin-left: 370px;margin-top: 30px;"></a>
+            <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px" style="margin-left: 370px;margin-top: 30px;"></a>
             <a href="#"><img src="assets/EHY6QnZYdNX.png" alt="" width="120px" style="margin-top: 30px;"></a>
         </div>
         <div class="container">
@@ -130,18 +144,16 @@
             var username = document.getElementById("login-username").value;
             var password = document.getElementById("login-password").value;
 
-            // Read the existing JSON data from localStorage
             var users = JSON.parse(localStorage.getItem("users")) || [];
 
-            // Check if the entered credentials match any user in the JSON data
             var user = users.find(function(user) {
                 return user.username === username && user.password === password;
             });
 
             if (user) {
                 alert("Login successful!");
+                window.location = "http://127.0.0.1:5500/mess.html";
                 clearLoginForm();
-                // Perform any additional actions after successful login
             } else {
                 alert("Invalid username or password!");
             }
