--- a/app.html
+++ b/app.html
@@ -129,7 +129,7 @@ footer {
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-          <a href="http://127.0.0.1:5500/login.html" class="cta-btn">Sign In</a>
+          <a href="http://127.0.0.1:5500/login.html" class="cta-btn">Sign Out</a>
         </nav>
     </header>
         <section class="products">
