--- a/create.html
+++ b/create.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>AVIS Create Account</title>
-  <link rel="icon" type="image/x-icon" href="assets/images.jpg">
+  <link rel="icon" type="image/x-icon" href="assets/camp.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <style>
     body {
