--- a/mess.html
+++ b/mess.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" type="image/x-icon" href="assets/camp.png">
   <title>AVIS</title>
   <link rel="stylesheet" href="styles.css">
 </head>
