--- a/create.html
+++ b/create.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AVIS Create Account</title>
+  <title>Create &bull; AVIS</title>
   <link rel="icon" type="image/x-icon" href="assets/camp.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <style>
@@ -123,9 +123,7 @@
     }
 
     function clearCreateForm() {
-      document
-
-.getElementById("create-username").value = "";
+      document.getElementById("create-username").value = "";
       document.getElementById("create-password").value = "";
       document.getElementById("create-confirmpassword").value = "";
     }
