--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AVIS Login Page</title>
+    <title>Login &bull; AVIS</title>
     <link rel="icon" type="image/x-icon" href="assets/camp.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -149,7 +149,6 @@
             var user = users.find(function(user) {
                 return user.username === username && user.password === password;
             });
-
             if (user) {
                 alert("Login successful!");
                 window.location = "http://127.0.0.1:5500/mess.html";
@@ -158,12 +157,6 @@
                 alert("Invalid username or password!");
             }
         }
-
-        function clearCreateForm() {
-            document.getElementById("create-username").value = "";
-            document.getElementById("create-password").value = "";
-        }
-
         function clearLoginForm() {
             document.getElementById("login-username").value = "";
             document.getElementById("login-password").value = "";
