--- a/mess.html
+++ b/mess.html
@@ -39,7 +39,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 My App. All rights reserved.</p>
+    <p>&copy; 2023 Your Company. All rights reserved.</p>
   </footer>
 
   <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
