--- a/appsecond.html
+++ b/appsecond.html
@@ -171,14 +171,14 @@
               <img src="assets/shoe1.jpg" alt="Product 1">
               <h3>Boat Shoe</h3>
               <p>Rs. 4,900</p>
-              <a href="#" class="btn">Add to Cart</a>
+              <a href="http://127.0.0.1:5500/cash.html" class="btn">Add to Cart</a>
             </div>
           
             <div class="product-card">
               <img src="assets/shoe2.jpg" alt="Product 2">
               <h3>Nike</h3>
               <p>RS. 1,999</p>
-              <a href="#" class="btn">Add to Cart</a>
+              <a href="http://127.0.0.1:5500/shoe2.html" class="btn">Add to Cart</a>
             </div>
           
             <div class="product-card">
