--- a/app.html
+++ b/app.html
@@ -9,7 +9,7 @@
     <title>AVIS</title>
     <style>
         /* Basic styling for header, navigation, product cards, footer, etc. */
-        /* Add responsive styles */
+        
         body {
           font-family: Arial, sans-serif;
           margin: 0;
@@ -117,7 +117,7 @@
           text-align: center;
         }
 
-        /* Responsive styles */
+        /* Media queries */
         @media screen and (max-width: 768px) {
           .products {
             justify-content: flex-start;
@@ -154,6 +154,7 @@
     </style>    
 </head>
 <body>
+  <!--Header-->
     <header>
         <nav>
             <h2><i class="fas fa-campground"></i> AVIS</h2>
@@ -166,6 +167,7 @@
           <a href="http://127.0.0.1:5500/login.html" class="cta-btn">Sign Out</a>
         </nav>
     </header>
+    <!--Content Cards-->
         <section class="products">
             <div class="product-card">
               <img src="assets/download (1).jpg" alt="Product 1">
@@ -238,6 +240,7 @@
             <a href="http://127.0.0.1:5500/mess.html"><button class="btn btn-info">&larr; Previous</button></a>
             <a href="http://127.0.0.1:5500/appsecond.html"><button class="btn btn-info">Next &rarr;</button></a>
           </div> 
+          <!--Footer-->
     <footer>
         <p>&copy; 2023 Your Company. All rights reserved.</p>
     </footer>
