--- a/appsecond.html
+++ b/appsecond.html
@@ -117,7 +117,7 @@
           text-align: center;
         }
 
-        /* Responsive styles */
+        /* Media Queries*/
         @media screen and (max-width: 768px) {
           .products {
             justify-content: flex-start;
@@ -154,6 +154,7 @@
     </style>    
 </head>
 <body>
+  <!--Header-->
     <header>
         <nav>
             <h2><i class="fas fa-campground"></i> AVIS</h2>
@@ -166,6 +167,7 @@
           <a href="http://127.0.0.1:5500/login.html" class="cta-btn">Sign Out</a>
         </nav>
     </header>
+    <!--Cards-->
         <section class="products">
             <div class="product-card">
               <img src="assets/shoe1.jpg" alt="Product 1">
@@ -238,6 +240,7 @@
             <a href="http://127.0.0.1:5500/app.html"><button class="btn btn-info">&larr; Previous</button></a>
             <a href="http://127.0.0.1:5500/appsecond.html"><button class="btn btn-info">Next &rarr;</button></a>
           </div> 
+          <!--Footer-->
     <footer>
         <p>&copy; 2023 Your Company. All rights reserved.</p>
     </footer>
