--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       gap: 20px;
     }
 
-    /* Navbar styles */
+    /* Navbar */
     .navbar {
       padding: 10px;
       text-align: center;
@@ -38,7 +38,7 @@
       margin-right: 10px;
     }
 
-    /* Footer styles */
+    /* Footer */
     footer {
       padding: 20px;
       text-align: center;
@@ -48,7 +48,7 @@
 a{
   color: antiquewhite;
 }
-    /* Responsive styles */
+    /* Media queries */
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
