--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
             color: #f9f9f9;
         }
 
-        /* Responsive styles */
+        /* Media Queries */
         @media (max-width: 768px) {
             .form-container {
                 width: 100%;
@@ -89,6 +89,7 @@
 </head>
 
 <body>
+    <!--Login box-->
     <div class="container">
         <div class="form-container">
             <h2><i class="fas fa-campground"></i> AVIS</h2>
@@ -107,6 +108,7 @@
             </form>
         </div>
     </div>
+    <!--Footer-->
     <footer>
         <div class="container">
             <ul class="footer-menu">
@@ -134,6 +136,7 @@
             <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px" style="margin-left: 370px;margin-top: 30px;"></a>
             <a href="#"><img src="assets/EHY6QnZYdNX.png" alt="" width="120px" style="margin-top: 30px;"></a>
         </div>
+        <!--Copy right-->
         <div class="container">
             <p>&copy; 2023 Your Company. All rights reserved.</p>
         </div>
