--- a/mess.html
+++ b/mess.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!--Content-->
   <header>
     <h1>Welcome to My AVIS</h1>
   </header>
@@ -37,7 +38,7 @@
       </div>
     </section>
   </main>
-
+<!--Footer-->
   <footer>
     <p>&copy; 2023 Your Company. All rights reserved.</p>
   </footer>
