--- a/shoe2.html
+++ b/shoe2.html
@@ -163,7 +163,7 @@
           text-align: center;
         }
 
-        /* Responsive styles */
+        /* Media queries */
         @media screen and (max-width: 768px) {
           .products {
             justify-content: flex-start;
@@ -200,6 +200,7 @@
     </style>
 </head>
 <body>
+  <!--Header-->
     <header>
         <nav>
             <h2><i class="fas fa-campground"></i> AVIS</h2>
@@ -212,6 +213,7 @@
           <a href="http://127.0.0.1:5500/login.html" class="cta-btn">Sign Out</a>
         </nav>
     </header>
+    <!--Carousel-->
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -233,8 +235,8 @@
             <span class="visually-hidden">Next</span>
         </a>
     </div>
-
     <a href="#" class="buy-btn">Buy Now</a>
+    <!--Cards-->
     <section class="products">
         <div class="product-card">
           <img src="assets/shoe1.jpg" alt="Product 1">
@@ -306,7 +308,8 @@
       <div class="container">
         <a href="http://127.0.0.1:5500/app.html"><button class="btn btn-info">&larr; Previous</button></a>
         <a href="http://127.0.0.1:5500/appsecond.html"><button class="btn btn-info">Next &rarr;</button></a>
-      </div> 
+      </div>
+      <!--Footer--> 
 <footer>
     <p>&copy; 2023 Your Company. All rights reserved.</p>
 </footer>
