--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/x-icon" href="assets/camp.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
     <style>
         body {
             background-color: #555;
@@ -146,18 +148,34 @@
         function login() {
             var username = document.getElementById("login-username").value;
             var password = document.getElementById("login-password").value;
-            if (username=='SivaBharath' && password=='Siva@123') {
-                alert("Login successful!");
-                window.location = "http://127.0.0.1:5500/app.html";
-                clearLoginForm();
-            } else {
-                alert("Invalid username or password!");
-            }
-        }
+            if (username=='SivaBharath' && password=='Siva@123') {                
+                function showSuccessMessage() {
+    Swal.fire({
+      icon: 'success',
+      title: 'Login Successfully',
+      showConfirmButton: true,
+      confirmButtonText: 'OK'
+    }).then(function(){
+        window.location.href = "http://127.0.0.1:5500/app.html";
+    });
+  }
+  showSuccessMessage();
+      }else {
+function showError(){
+Swal.fire({
+    icon:'error',
+    title:'Invalid username or password',
+    showConfirmButton:'true',
+    confirmButtonText:'OK'
+});
+}
+showError();           
+ }
+        
         function clearLoginForm() {
             document.getElementById("login-username").value = "";
             document.getElementById("login-password").value = "";
-        }
+        }} 
     </script>
 </body>
 
