--- a/app.html
+++ b/app.html
@@ -365,7 +365,7 @@ if (FoodName.match(nameCheck) && Cost.match(costCheck)) {
     <nav>
         <h2><i class="fas fa-campground"></i> AVIS</h2>
       <ul class="nav-links">
-        <li><a href="http://127.0.0.1:5500/mess.html">Home</a></li>
+        <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
