--- a/appsecond.html
+++ b/appsecond.html
@@ -159,10 +159,10 @@
         <nav>
             <h2><i class="fas fa-campground"></i> AVIS</h2>
           <ul class="nav-links">
-            <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="http://127.0.0.1:5500/about.html"><h5>About</h5></a></li>
+            <li><a href="http://127.0.0.1:5500/contact.html"><h5>Contact</h5></a></li>
+            <li><a href="http://127.0.0.1:5500/career.html"><h5>Careers</h5></a></li>
+            <li><a href="http://127.0.0.1:5500/help.html#troubleshooting"><h5>Help</h5></a></li>
           </ul>
           <a href="http://127.0.0.1:5500/login.html" class="cta-btn">Sign Out</a>
         </nav>
