--- a/login.html
+++ b/login.html
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
     <style>
         body {
             background-color: #555;
             background: #555;
-            background: -webkit-linear-gradient(to right,  #555,  #555);
-            background: linear-gradient(to right,  #555,  #555);
+            background: -webkit-linear-gradient(to right, #555, #555);
+            background: linear-gradient(to right, #555, #555);
         }
 
         .form-container {
@@ -57,9 +56,14 @@
             margin-right: 10px;
         }
 
+        .social-icons {
+            display: flex;
+            justify-content: center;
+        }
+
         .social-icons a {
             color: #f9f9f9;
-            margin-left: 250px;
+            margin: 0 5px;
         }
 
         a {
@@ -67,8 +71,7 @@
             text-decoration: none;
         }
 
-        p{
-            margin-left: 360px;
+        p {
             color: #f9f9f9;
         }
 
@@ -82,10 +85,6 @@
             .social-icons a {
                 margin-left: 0;
             }
-
-            p{
-                margin-left: 0;
-            }
         }
     </style>
 </head>
@@ -93,40 +92,36 @@
 <body>
     <!--Login box-->
     <div class="container">
-        <div class="form-container">
-            <h2><i class="fas fa-campground"></i> AVIS</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="login-username" class="form-label">Username:</label>
-                    <input type="text" id="login-username" required class="form-control">
-                </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="form-container">
+                    <h2><i class="fas fa-campground"></i> AVIS</h2>
+                    <form>
+                        <div class="mb-3">
+                            <label for="login-username" class="form-label">Username:</label>
+                            <input type="text" id="login-username" required class="form-control">
+                        </div>
 
-                <div class="mb-3">
-                    <label for="login-password" class="form-label">Password:</label>
-                    <input type="password" id="login-password" required class="form-control">
-                </div>
+                        <div class="mb-3">
+                            <label for="login-password" class="form-label">Password:</label>
+                            <input type="password" id="login-password" required class="form-control">
+                        </div>
 
-                <button type="button" onclick="login()" class="btn btn-primary">Login</button>
-            </form>
+                        <button type="button" onclick="login()" class="btn btn-primary">Login</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
+
     <!--Footer-->
-    <footer>
+    <footer class="text-center">
         <div class="container">
             <ul class="footer-menu">
-                <li><a href="#">Meta</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Api</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Top Accounts</a></li>
-                <li><a href="#">Locations</a></li>
-                <li><a href="#">Instagram Lite</a></li>
-                <li><a href="#">Contact Uploading & Non-Users</a></li>
-                <li><a href="#">Meta Verified</a></li>
+                <li><a href="http://127.0.0.1:5500/about.html"><h5>About</h5></a></li>
+                <li><a href="http://127.0.0.1:5500/contact.html"><h5>Contact</h5></a></li>
+                <li><a href="http://127.0.0.1:5500/career.html"><h5>Careers</h5></a></li>
+                <li><a href="http://127.0.0.1:5500/help.html#troubleshooting"><h5>Help</h5></a></li>
             </ul>
             <div class="social-icons">
                 <a href="https://www.facebook.com/login/"><i class="fab fa-facebook"></i></a>
@@ -134,16 +129,17 @@
                 <a href="https://www.instagram.com/accounts/login/"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
-        <div class="container">
-            <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px" style="margin-left: 370px;margin-top: 30px;"></a>
-            <a href="#"><img src="assets/EHY6QnZYdNX.png" alt="" width="120px" style="margin-top: 30px;"></a>
+        <div class="container text-center mt-4">
+            <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px"></a>
+            <a href="#"><img src="assets/EHY6QnZYdNX.png" alt="" width="120px"></a>
         </div>
         <!--Copy right-->
         <div class="container">
-            <p>&copy; 2023 Your Company. All rights reserved.</p>
+            <p class="text-center">&copy; 2023 Your Company. All rights reserved.</p>
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
     <script>
         function login() {
             var username = document.getElementById("login-username").value;
@@ -156,29 +152,30 @@
             });
             if (user) {
                 function showSuccessMessage() {
-    Swal.fire({
-      icon: 'success',
-      title: 'Login Successfully',
-      showConfirmButton: true,
-      confirmButtonText: 'OK'
-    }).then(function(){
-        window.location.href = "http://127.0.0.1:5500/mess.html";
-    });
-  }
-  showSuccessMessage();
-clearLoginForm();
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'Login Successfully',
+                        showConfirmButton: true,
+                        confirmButtonText: 'OK'
+                    }).then(function() {
+                        window.location.href = "http://127.0.0.1:5500/mess.html";
+                    });
+                }
+                showSuccessMessage();
+                clearLoginForm();
             } else {
-                function showError(){
-Swal.fire({
-    icon:'error',
-    title:'Invalid username or password',
-    showConfirmButton:'true',
-    confirmButtonText:'OK'
-});
-}
-showError(); 
+                function showError() {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Invalid username or password',
+                        showConfirmButton: true,
+                        confirmButtonText: 'OK'
+                    });
+                }
+                showError();
             }
         }
+
         function clearLoginForm() {
             document.getElementById("login-username").value = "";
             document.getElementById("login-password").value = "";
