--- a/app.html
+++ b/app.html
@@ -366,9 +366,9 @@ if (FoodName.match(nameCheck) && Cost.match(costCheck)) {
         <h2><i class="fas fa-campground"></i> AVIS</h2>
       <ul class="nav-links">
         <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="http://127.0.0.1:5500/career.html">Careers</a></li>
+        <li><a href="http://127.0.0.1:5500/about.html">About</a></li>
+        <li><a href="http://127.0.0.1:5500/contact.html">Contact</a></li>
       </ul>
       <a href="http://127.0.0.1:5500/admin.html" class="cta-btn">Sign Out</a>
     </nav>
