--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
   <title>Contact Page</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="icon" type="image/x-icon" href="assets/camp.png">
   <style>
     body {
       background-color: #f8f9fa;
