--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ a{
       window.location = "http://127.0.0.1:5500/login.html";
     }
     function login(){
-      window.location="http://127.0.0.1:5500/admin.html"
+      window.location="http://127.0.0.1:5500/admin.html";
     }
   </script>
 </head>
