--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <title>About</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="icon" type="image/x-icon" href="assets/camp.png">
   <style>
     /* Custom CSS */
     body {
