--- a/career.html
+++ b/career.html
@@ -3,6 +3,7 @@
 <head>
   <title>Careers</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="icon" type="image/x-icon" href="assets/camp.png">
   <style>
     .job-list {
       margin-bottom: 30px;
