--- a/help.html
+++ b/help.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Help</title>
+  <link rel="icon" type="image/x-icon" href="assets/camp.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <style>
     .help-item {
