--- a/appsecond.html
+++ b/appsecond.html
@@ -211,10 +211,10 @@
 <nav>
   <a href="#" class="logo">AVIS</a>
   <ul class="nav-links">
-    <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-    <li><a href="http://127.0.0.1:5500/career.html">Careers</a></li>
-    <li><a href="http://127.0.0.1:5500/about.html">About</a></li>
-    <li><a href="http://127.0.0.1:5500/contact.html">Contact</a></li>
+    <li><a href="http://127.0.0.1:5500/index.html"target="blank">Home</a></li>
+    <li><a href="http://127.0.0.1:5500/career.html"target="blank">Careers</a></li>
+    <li><a href="http://127.0.0.1:5500/about.html"target="blank">About</a></li>
+    <li><a href="http://127.0.0.1:5500/contact.html"target="blank">Contact</a></li>
     <li class="cart-icon">
       <i class="fas fa-shopping-cart"></i>
       <span class="count">0</span>
