--- a/login.html
+++ b/login.html
@@ -118,20 +118,20 @@
     <footer class="text-center">
         <div class="container">
             <ul class="footer-menu">
-                <li><a href="http://127.0.0.1:5500/about.html"><h5>About</h5></a></li>
-                <li><a href="http://127.0.0.1:5500/contact.html"><h5>Contact</h5></a></li>
-                <li><a href="http://127.0.0.1:5500/career.html"><h5>Careers</h5></a></li>
-                <li><a href="http://127.0.0.1:5500/help.html#troubleshooting"><h5>Help</h5></a></li>
+                <li><a href="http://127.0.0.1:5500/about.html"target="blank"><h5>About</h5></a></li>
+                <li><a href="http://127.0.0.1:5500/contact.html"target="blank"><h5>Contact</h5></a></li>
+                <li><a href="http://127.0.0.1:5500/career.html"target="blank"><h5>Careers</h5></a></li>
+                <li><a href="http://127.0.0.1:5500/help.html#troubleshooting"target="blank"><h5>Help</h5></a></li>
             </ul>
             <div class="social-icons">
-                <a href="https://www.facebook.com/login/"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com/i/flow/signup"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/accounts/login/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/login/"target="blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/i/flow/signup"target="blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/accounts/login/"target="blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <div class="container text-center mt-4">
-            <a href="#"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px"></a>
-            <a href="#"><img src="assets/EHY6QnZYdNX.png" alt="" width="120px"></a>
+            <a href="https://play.google.com/store/apps?utm_source=apac_med&utm_medium=hasem&utm_content=Oct0121&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-in-1003227-med-hasem-ap-Evergreen-Oct0121-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700064490253544_creativeid_480915691381_device_c&gclid=CjwKCAjw9pGjBhB-EiwAa5jl3Bo3O4EVWF-UwgBdjNcCzw1onNQ_RnY9q3ZWtEn1wvWUeh2CVQYEkBoC8p0QAvD_BwE&gclsrc=aw.ds&pli=1"target="blank"><img src="assets/c5Rp7Ym-Klz.png" alt="" width="150px"></a>
+            <a href="https://www.microsoft.com/en-in"target="blank"><img src="assets/EHY6QnZYdNX.png" alt="" width="120px"></a>
         </div>
         <!--Copy right-->
         <div class="container">
