--- a/mess.html
+++ b/mess.html
@@ -79,7 +79,7 @@ footer {
     <section class="hero">
       <h2>Your Journey Begins Here</h2>
       <p>Discover new experiences and connect with like-minded individuals.</p>
-      <a href="http://127.0.0.1:5500/appsecond.html" class="btn">Get Started</a>
+      <a href="http://127.0.0.1:5500/appsecond.html"target="blank" class="btn">Get Started</a>
     </section>
 
     <section class="features">
