--- a/app.html
+++ b/app.html
@@ -365,12 +365,12 @@ if (FoodName.match(nameCheck) && Cost.match(costCheck)) {
     <nav>
         <h2><i class="fas fa-campground"></i> AVIS</h2>
       <ul class="nav-links">
-        <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-        <li><a href="http://127.0.0.1:5500/career.html">Careers</a></li>
-        <li><a href="http://127.0.0.1:5500/about.html">About</a></li>
-        <li><a href="http://127.0.0.1:5500/contact.html">Contact</a></li>
+        <li><a href="http://127.0.0.1:5500/index.html"target="blank">Home</a></li>
+        <li><a href="http://127.0.0.1:5500/career.html"target="blank">Careers</a></li>
+        <li><a href="http://127.0.0.1:5500/about.html"target="blank">About</a></li>
+        <li><a href="http://127.0.0.1:5500/contact.html"target="blank">Contact</a></li>
       </ul>
-      <a href="http://127.0.0.1:5500/admin.html" class="cta-btn">Sign Out</a>
+      <a href="http://127.0.0.1:5500/admin.html"target="blank" class="cta-btn">Sign Out</a>
     </nav>
 </header>
   <div class="container">
