--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ a{
   <div class="container">
     <nav class="navbar">
       <ul>        
-        <li><a href="http://127.0.0.1:5500/about.html"><h5>About</h5></a></li>
-        <li><a href="http://127.0.0.1:5500/contact.html"><h5>Contact</h5></a></li>
-        <li><a href="http://127.0.0.1:5500/career.html"><h5>Careers</h5></a></li>
-        <li><a href="http://127.0.0.1:5500/help.html#troubleshooting"><h5>Help</h5></a></li>
+        <li><a href="http://127.0.0.1:5500/about.html"target="blank"><h5>About</h5></a></li>
+        <li><a href="http://127.0.0.1:5500/contact.html"target="blank"><h5>Contact</h5></a></li>
+        <li><a href="http://127.0.0.1:5500/career.html"target="blank"><h5>Careers</h5></a></li>
+        <li><a href="http://127.0.0.1:5500/help.html#troubleshooting"target="blank"><h5>Help</h5></a></li>
       </ul>
     </nav>
   </div>
@@ -100,9 +100,9 @@ a{
       <button onclick="log()" class="btn btn-primary">Login User</button>
       <div>
         <p style="color: antiquewhite;">Advertisement</p>
-        <a href="https://play.google.com/store/apps?utm_source=apac_med&utm_medium=hasem&utm_content=Oct0121&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-in-1003227-med-hasem-ap-Evergreen-Oct0121-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700064490253544_creativeid_480915691381_device_c&gclid=CjwKCAjw9pGjBhB-EiwAa5jl3Bo3O4EVWF-UwgBdjNcCzw1onNQ_RnY9q3ZWtEn1wvWUeh2CVQYEkBoC8p0QAvD_BwE&gclsrc=aw.ds&pli=1"><img
-            src="assets/c5Rp7Ym-Klz.png" alt="Google Play" width="200px"></a>
-        <a href="https://www.microsoft.com/en-in"><img src="assets/EHY6QnZYdNX.png" alt="Microsoft" width="160px"></a>
+        <a href="https://play.google.com/store/apps?utm_source=apac_med&utm_medium=hasem&utm_content=Oct0121&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-in-1003227-med-hasem-ap-Evergreen-Oct0121-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700064490253544_creativeid_480915691381_device_c&gclid=CjwKCAjw9pGjBhB-EiwAa5jl3Bo3O4EVWF-UwgBdjNcCzw1onNQ_RnY9q3ZWtEn1wvWUeh2CVQYEkBoC8p0QAvD_BwE&gclsrc=aw.ds&pli=1"target="blank"><img
+         src="assets/c5Rp7Ym-Klz.png" alt="Google Play" width="200px"></a>
+        <a href="https://www.microsoft.com/en-in"target="blank"><img src="assets/EHY6QnZYdNX.png" alt="Microsoft" width="160px"></a>
       </div>
     </div>
   </div>
